# nanio-orchestrator

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  dev.env.example  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  api-reference.md  architecture.md  configuration.md  contributing.md  installation.md
nanio_orchestrator/: __init__.py  __main__.py  app.py  audit_log.py  auth.py  backup.py  bucket_sync.py  cli.py  config.py  credentials.py  db.py  drift.py  install.py  main.py  migration_engine.py  models.py  rebuild.py  s3_proxy.py  s3client.py  sidecar.py
nanio_orchestrator/api/: audit.py  buckets.py  config.py  credentials.py  health.py  migrations.py  pools.py  vhosts.py
nanio_orchestrator/nginx/: __init__.py  executor.py  generator.py  parser.py
nanio_orchestrator/nginx/templates/: nanio_options.toml.j2  nanio_service.j2  node_nginx_http.conf.j2  node_nginx_nanio.conf.j2  upstream.conf.j2  vhost.conf.j2
nanio_orchestrator/web/: routes.py
nanio_orchestrator/web/static/: app.js  style.css
nanio_orchestrator/web/templates/: audit.html  base.html  buckets.html  config.html  dashboard.html  login.html  migrations.html  pools.html  settings.html  vhosts.html
scripts/: bootstrap.sh
systemd/: nanio-orchestrator.service
tests/: conftest.py  test_audit.py  test_auth.py  test_buckets.py  test_config.py  test_credentials.py  test_db.py  test_drift.py  test_encryption.py  test_health.py  test_live_migration.py  test_migration_cascade.py  test_migrations.py  test_node_config.py  test_pools.py  test_rebuild.py  test_s3_proxy.py  test_s3client.py  test_vhosts.py  test_web.py
