[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "nanio-orchestrator"
version = "0.1.0"
description = "Nginx configuration manager and gateway orchestrator for nanio S3-compatible storage clusters"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Nuno Kisc", email = "nuno@kisc.pt" }]
keywords = ["nginx", "s3", "storage", "orchestrator", "nanio", "gateway"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: No Input/Output (Daemon)",
  "Framework :: FastAPI",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Proxy Servers",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/nunokisc/nanio-orchestrator"
Repository = "https://github.com/nunokisc/nanio-orchestrator"
Documentation = "https://github.com/nunokisc/nanio-orchestrator/tree/main/docs"
"Bug Tracker" = "https://github.com/nunokisc/nanio-orchestrator/issues"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "aiosqlite>=0.20",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "pydantic-settings>=2.2",
  "click>=8.1",
  "aiofiles>=23.2",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.4",
]

[project.scripts]
nanio-orchestrator = "nanio_orchestrator.cli:main"

[tool.setuptools.packages.find]
include = ["nanio_orchestrator*"]

[tool.setuptools.package-data]
"nanio_orchestrator" = [
    "web/templates/*.html",
    "web/static/*.css",
    "web/static/*.js",
    "nginx/templates/*.j2",
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
